Update different setting of adult_sex
try different valid/test split

--- a/predict-responsibly/results/experiment analysis.ipynb
+++ b/predict-responsibly/results/experiment analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,8 @@
     "adult_sex_info[\"dataset_name\"] = \"Adult\"\n",
     "adult_sex_info[\"proctected_feature\"] = \"sex\"\n",
     "adult_sex = pd.read_csv(\"adult_sex.csv\")\n",
+    "biases = []\n",
+    "errors = []\n",
     "for budget in [1,0.1,0.01]:\n",
     "    data = data = adult_sex[adult_sex[\"budget\"] == budget]\n",
     "    adult_sex_info[\"budget={}\".format(budget)] = {}\n",
@@ -45,12 +47,14 @@
     "        eod_mean = np.mean(fcdata[\"Equal opportunity difference\"])\n",
     "        error_std = np.std(fcdata[\"Error\"])\n",
     "        eod_std = np.std(fcdata[\"Equal opportunity difference\"])\n",
+    "        biases.append(eod_mean)\n",
+    "        errors.append(error_mean)\n",
     "        adult_sex_info[\"budget={}\".format(budget)][\"fc={}\".format(fc)] = {}\n",
     "        adult_sex_info[\"budget={}\".format(budget)][\"fc={}\".format(fc)][\"Error\"] = [error_mean, error_std]\n",
     "        adult_sex_info[\"budget={}\".format(budget)][\"fc={}\".format(fc)][\"EOD\"] = [eod_mean, eod_std]\n",
-    "#save adult_sex_info to a json file\n",
-    "with open(\"adult_sex_info.json\", \"w\") as outfile: \n",
-    "    json.dump(adult_sex_info, outfile)"
+    "# #save adult_sex_info to a json file\n",
+    "# with open(\"adult_sex_info.json\", \"w\") as outfile: \n",
+    "#     json.dump(adult_sex_info, outfile)"
    ]
   },
   {
@@ -219,6 +223,20 @@
     "print(adult_sex_info[\"budget=0.01\"][\"fc=1.5\"][\"Error\"])\n",
     "print(adult_sex_info[\"budget=0.1\"][\"fc=1.5\"][\"Error\"])\n",
     "print(adult_sex_info[\"budget=1\"][\"fc=1.5\"][\"Error\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the bias vs. error\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams.update({'font.size': 14})\n",
+    "plt.figure(figsize=(8,6))\n",
+    "biases = "
    ]
   },
   {
